[tool.poetry]
name = "hide-teams-overlay"
version = "0.1.0"
description = ""
authors = ["Michael Chuang <zhaungsont@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyinstaller = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
